swap pouchdb-server with multicouch

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "moment": "^2.9.0",
     "pouchdb": "^3.3.1",
     "promise": "^7.0.0",
-    "request": "^2.53.0"
+    "request": "^2.53.0",
+    "which": "^1.0.9"
   },
   "devDependencies": {
     "browserify": "^9.0.3",
@@ -38,7 +39,7 @@
     "karma-mocha-reporter": "^1.0.0",
     "karma-phantomjs-launcher": "^0.1.4",
     "mocha": "^2.1.0",
-    "pouchdb-server": "^0.6.4",
+    "multicouch": "^0.8.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0"
   },
