--- a/package.json
+++ b/package.json
@@ -26,18 +26,27 @@
   },
   "devDependencies": {
     "browserify": "^9.0.3",
+    "favicons": "^3.1.1",
     "gulp": "^3.8.11",
+    "gulp-concat": "^2.5.2",
+    "gulp-declare": "^0.3.0",
+    "gulp-handlebars": "^4.0.0",
+    "gulp-imagemin": "^2.2.1",
     "gulp-jshint": "^1.9.2",
+    "gulp-manifest": "0.0.6",
     "gulp-mocha": "^2.0.0",
     "gulp-rename": "^1.2.0",
+    "gulp-replace": "^0.5.3",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.3",
+    "gulp-wrap": "^0.11.0",
     "jshint-stylish": "^1.0.1",
     "karma": "^0.12.31",
     "karma-browserify": "^4.0.0",
     "karma-mocha": "^0.1.10",
     "karma-mocha-reporter": "^1.0.0",
     "karma-phantomjs-launcher": "^0.1.4",
+    "merge-stream": "^0.1.7",
     "mocha": "^2.1.0",
     "multicouch": "^0.8.2",
     "vinyl-buffer": "^1.0.0",
