--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^3.2.0",
     "minimist": "^1.1.0",
     "moment": "^2.9.0",
+    "nodemailer": "^1.3.4",
     "pouchdb": "^3.3.1",
     "promise": "^7.0.0",
     "request": "^2.53.0",
