--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^1.3.4",
     "pouchdb": "^3.3.1",
     "promise": "^7.0.0",
+    "read": "^1.0.5",
     "request": "^2.53.0",
     "which": "^1.0.9"
   },
