--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "backbone": "^1.2.0",
+    "boom": "^2.7.1",
     "bunyan": "^1.3.4",
     "handlebars": "^3.0.3",
     "hapi": "^8.2.0",
