--- a/package.json
+++ b/package.json
@@ -8,28 +8,31 @@
     "capot": "./bin/cli.js"
   },
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test:server && gulp test:client"
   },
   "dependencies": {
-    "async": "^1.3.0",
-    "backbone": "^1.2.1",
+    "async": "^1.4.2",
+    "backbone": "^1.2.2",
     "boom": "^2.8.0",
     "bunyan": "^1.4.0",
+    "h2o2": "^4.0.1",
     "handlebars": "^3.0.3",
-    "hapi": "^8.8.0",
-    "lodash": "^3.10.0",
-    "minimist": "^1.1.0",
-    "moment": "^2.10.3",
+    "hapi": "^9.0.3",
+    "inert": "^3.0.1",
+    "joi": "^6.6.1",
+    "lodash": "^3.10.1",
+    "minimist": "^1.1.3",
+    "moment": "^2.10.6",
     "multicouch": "^0.8.2",
     "nodemailer": "^1.4.0",
-    "pouchdb": "^3.6.0",
-    "promise": "^7.0.3",
+    "pouchdb": "^4.0.0",
+    "promise": "^7.0.4",
     "read": "^1.0.6",
-    "request": "^2.58.0",
+    "request": "^2.61.0",
     "which": "^1.1.1"
   },
   "devDependencies": {
-    "browserify": "^11.0.0",
+    "browserify": "^11.0.1",
     "favicons": "^3.1.3",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
@@ -37,23 +40,29 @@
     "gulp-handlebars": "^4.0.0",
     "gulp-imagemin": "^2.3.0",
     "gulp-jshint": "^1.11.2",
-    "gulp-manifest": "0.0.7",
+    "gulp-manifest": "0.0.8",
     "gulp-mocha": "^2.1.3",
     "gulp-rename": "^1.2.0",
-    "gulp-replace": "^0.5.3",
+    "gulp-replace": "^0.5.4",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.6",
     "gulp-wrap": "^0.11.0",
+    "joi": "^6.6.1",
     "jshint-stylish": "^2.0.1",
-    "karma": "^0.13.2",
-    "karma-browserify": "^4.2.1",
+    "karma": "^0.13.9",
+    "karma-browserify": "^4.3.0",
     "karma-mocha": "^0.2.0",
-    "karma-mocha-reporter": "^1.0.0",
-    "karma-phantomjs-launcher": "^0.2.0",
-    "merge-stream": "^0.1.8",
+    "karma-mocha-reporter": "^1.1.1",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "longjohn": "^0.2.8",
+    "lout": "^7.0.0",
+    "merge-stream": "^1.0.0",
+    "mkdirp": "^0.5.1",
     "mocha": "^2.2.5",
+    "rimraf": "^2.4.2",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0"
+    "vinyl-source-stream": "^1.0.0",
+    "vision": "^3.0.0"
   },
   "browser": {
     "handlebars": "handlebars/runtime.js",
