--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "dependencies": {
     "async": "^1.4.2",
     "backbone": "^1.2.2",
-    "boom": "^2.8.0",
+    "boom": "^2.9.0",
     "bunyan": "^1.4.0",
     "h2o2": "^4.0.1",
-    "handlebars": "^3.0.3",
-    "hapi": "^9.0.3",
+    "handlebars": "^4.0.2",
+    "hapi": "^10.0.1",
     "inert": "^3.0.1",
     "joi": "^6.6.1",
     "lodash": "^3.10.1",
@@ -29,7 +29,7 @@
     "promise": "^7.0.4",
     "read": "^1.0.6",
     "request": "^2.61.0",
-    "which": "^1.1.1"
+    "which": "^1.1.2"
   },
   "devDependencies": {
     "browserify": "^11.0.1",
@@ -40,11 +40,11 @@
     "gulp-handlebars": "^4.0.0",
     "gulp-imagemin": "^2.3.0",
     "gulp-jshint": "^1.11.2",
-    "gulp-manifest": "0.0.8",
+    "gulp-manifest": "^0.0.10",
     "gulp-mocha": "^2.1.3",
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.5.4",
-    "gulp-uglify": "^1.1.0",
+    "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.6",
     "gulp-wrap": "^0.11.0",
     "joi": "^6.6.1",
@@ -58,7 +58,7 @@
     "lout": "^7.0.0",
     "merge-stream": "^1.0.0",
     "mkdirp": "^0.5.1",
-    "mocha": "^2.2.5",
+    "mocha": "^2.3.3",
     "rimraf": "^2.4.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
