update html class when main view is set

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "backbone": "^1.2.2",
     "boom": "^2.9.0",
     "bunyan": "^1.4.0",
+    "follow": "^0.12.1",
     "h2o2": "^4.0.1",
     "handlebars": "^4.0.2",
     "hapi": "^10.0.1",
