--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "merge-stream": "^1.0.0",
     "mkdirp": "^0.5.1",
     "mocha": "^2.3.3",
+    "phantomjs": "^1.9.18",
     "rimraf": "^2.4.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
