--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "capot",
-  "version": "1.0.7",
+  "version": "1.1.0",
   "author": "Lupo Montero",
   "license": "MIT",
   "repository": "lupomontero/capot",
@@ -18,6 +18,7 @@
     "h2o2": "^4.0.1",
     "handlebars": "^4.0.3",
     "hapi": "^10.1.0",
+    "hapi-auth-cookie": "^3.1.0",
     "inert": "^3.0.1",
     "joi": "^6.6.1",
     "lodash": "^3.10.1",
@@ -25,7 +26,7 @@
     "moment": "^2.10.6",
     "multicouch": "^0.8.2",
     "nodemailer": "^1.5.0",
-    "pouchdb": "^4.0.0",
+    "oauth": "^0.9.14",
     "promise": "^7.0.4",
     "read": "^1.0.6",
     "request": "^2.64.0",
@@ -56,6 +57,7 @@
     "mkdirp": "^0.5.1",
     "mocha": "^2.3.3",
     "phantomjs": "^1.9.18",
+    "pouchdb": "^5.0.0",
     "rimraf": "^2.4.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
