--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "minimist": "^1.1.3",
     "moment": "^2.10.6",
     "multicouch": "^0.8.2",
-    "nodemailer": "^1.8.0",
+    "nodemailer": "^1.9.0",
     "oauth": "^0.9.14",
     "promise": "^7.0.4",
     "read": "^1.0.6",
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "browserify": "^12.0.1",
-    "favicons": "^3.2.0",
+    "favicons": "^4.0.6",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-declare": "^0.3.0",
@@ -57,11 +57,11 @@
     "mkdirp": "^0.5.1",
     "mocha": "^2.3.3",
     "phantomjs": "^1.9.18",
-    "pouchdb": "^5.1.0",
+    "pouchdb": "5.0.0",
     "rimraf": "^2.4.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
-    "vision": "^4.0.0"
+    "vision": "^4.0.1"
   },
   "browser": {
     "handlebars": "handlebars/runtime.js",
