--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "backbone": "^1.2.2",
     "boom": "^3.0.0",
     "follow": "^0.12.1",
+    "good": "^6.4.0",
+    "good-console": "^5.2.0",
     "h2o2": "^4.0.2",
     "handlebars": "^4.0.4",
     "hapi": "^11.1.0",
