--- a/package.json
+++ b/package.json
@@ -36,18 +36,20 @@
   },
   "devDependencies": {
     "browserify": "^12.0.1",
+    "eslint": "^1.9.0",
+    "eslint-config-hapi": "^7.0.0",
+    "eslint-plugin-hapi": "^4.0.0",
     "favicons": "^4.0.6",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-declare": "^0.3.0",
+    "gulp-eslint": "^1.1.0",
     "gulp-handlebars": "^4.0.0",
-    "gulp-jshint": "^1.12.0",
     "gulp-mocha": "^2.1.3",
     "gulp-rename": "^1.2.0",
     "gulp-uglify": "^1.4.2",
     "gulp-util": "^3.0.7",
     "gulp-wrap": "^0.11.0",
-    "jshint-stylish": "^2.0.1",
     "karma": "^0.13.15",
     "karma-browserify": "^4.3.0",
     "karma-mocha": "^0.2.0",
