--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: node_js
 node_js:
   - 5
-before_script:
+before_install:
   - npm install -g node-gyp
+before_script:
   - npm install -g gulp
