--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
+sudo: false
 language: node_js
 node_js:
   - 5
 before_script:
   - npm install -g gulp
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - gcc-4.8
+      - g++-4.8
