--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "gulp-wrap": "^0.11.0",
     "karma": "^0.13.15",
     "karma-browserify": "^4.3.0",
+    "karma-env-preprocessor": "^0.1.1",
     "karma-mocha": "^0.2.1",
     "karma-mocha-reporter": "^1.1.1",
     "karma-phantomjs-launcher": "^0.2.1",
