--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "capot",
   "version": "1.2.2",
-  "author": "Lupo Montero",
+  "author": {
+    "name": "Lupo Montero",
+    "url": "http://lupomontero.com"
+  },
   "license": "MIT",
   "repository": "lupomontero/capot",
+  "homepage": "https://github.com/lupomontero/capot",
   "bin": {
     "capot": "./bin/cli.js"
   },
@@ -12,59 +16,60 @@
     "test": "gulp test:server && gulp test:client"
   },
   "dependencies": {
-    "async": "^1.5.0",
+    "async": "^1.5.2",
     "backbone": "^1.2.2",
-    "boom": "^3.0.0",
+    "boom": "^3.1.1",
     "follow": "^0.12.1",
     "good": "^6.4.0",
     "good-console": "^5.2.0",
-    "h2o2": "^4.0.2",
+    "h2o2": "^5.0.0",
     "handlebars": "^4.0.5",
-    "hapi": "^11.1.2",
-    "hapi-auth-cookie": "^3.1.0",
+    "hapi": "^13.0.0",
+    "hapi-auth-cookie": "^6.0.0",
     "inert": "^3.2.0",
-    "joi": "^7.0.1",
-    "lodash": "^3.10.1",
+    "joi": "^7.2.0",
+    "lodash": "^4.0.0",
     "minimist": "^1.1.3",
-    "moment": "^2.10.6",
+    "moment": "^2.11.1",
     "multicouch": "^0.8.2",
-    "nodemailer": "^1.10.0",
+    "nodemailer": "^2.0.0",
     "oauth": "^0.9.14",
     "pouchdb": "5.0.0",
-    "promise": "^7.0.4",
+    "promise": "^7.1.1",
     "read": "^1.0.6",
     "request": "^2.67.0",
-    "which": "^1.2.0"
+    "which": "^1.2.1"
   },
   "devDependencies": {
-    "browserify": "^12.0.1",
+    "browserify": "^13.0.0",
     "eslint": "^1.10.3",
-    "eslint-config-hapi": "^8.0.0",
+    "eslint-config-hapi": "^8.0.1",
     "eslint-plugin-hapi": "^4.0.0",
-    "favicons": "^4.3.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-declare": "^0.3.0",
     "gulp-eslint": "^1.1.1",
+    "gulp-favicons": "^2.2.5",
     "gulp-handlebars": "^4.0.0",
     "gulp-mocha": "^2.2.0",
     "gulp-rename": "^1.2.0",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
     "gulp-wrap": "^0.11.0",
-    "karma": "^0.13.15",
-    "karma-browserify": "^4.4.2",
+    "karma": "^0.13.19",
+    "karma-browserify": "^5.0.1",
     "karma-env-preprocessor": "^0.1.1",
     "karma-mocha": "^0.2.1",
-    "karma-mocha-reporter": "^1.1.3",
-    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-mocha-reporter": "^1.1.5",
+    "karma-phantomjs-launcher": "^1.0.0",
     "longjohn": "^0.2.11",
-    "lout": "^7.2.0",
+    "lout": "^8.1.1",
     "merge-stream": "^1.0.0",
     "mkdirp": "^0.5.1",
     "mocha": "^2.3.4",
-    "phantomjs": "^1.9.19",
-    "rimraf": "^2.4.4",
+    "phantomjs": "^2.1.3",
+    "phantomjs-prebuilt": "^2.1.3",
+    "rimraf": "^2.5.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
     "vision": "^4.0.1"
@@ -72,7 +77,7 @@
   "browser": {
     "handlebars": "handlebars/runtime.js",
     "pouchdb": "pouchdb/dist/pouchdb.js",
-    "extend": "lodash/object/extend.js",
-    "omit": "lodash/object/omit.js"
+    "extend": "lodash/assignIn.js",
+    "omit": "lodash/omit.js"
   }
 }
