--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "multicouch": "^0.8.2",
     "nodemailer": "^2.0.0",
     "oauth": "^0.9.14",
-    "pouchdb": "5.0.0",
+    "pouchdb": "5.2.1",
     "promise": "^7.1.1",
     "read": "^1.0.6",
     "request": "^2.67.0",
@@ -72,7 +72,8 @@
     "rimraf": "^2.5.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
-    "vision": "^4.0.1"
+    "vision": "^4.0.1",
+    "watchify": "^3.7.0"
   },
   "browser": {
     "handlebars": "handlebars/runtime.js",
