--- a/package.json
+++ b/package.json
@@ -13,33 +13,33 @@
     "test": "gulp test:server && gulp test:client"
   },
   "dependencies": {
-    "async": "^1.5.2",
-    "backbone": "^1.3.1",
+    "async": "^2.0.0-rc.3",
+    "backbone": "^1.3.3",
     "boom": "^3.1.1",
     "follow": "^0.12.1",
     "good": "^6.6.0",
     "good-console": "^5.3.1",
     "h2o2": "^5.1.0",
     "handlebars": "^4.0.5",
-    "hapi": "^13.0.0",
+    "hapi": "^13.3.0",
     "hapi-auth-cookie": "^6.1.1",
     "inert": "^3.2.0",
-    "joi": "^8.0.4",
-    "lodash": "^4.6.1",
+    "joi": "^8.0.5",
+    "lodash": "^4.11.1",
     "minimist": "^1.1.3",
-    "moment": "^2.12.0",
+    "moment": "^2.13.0",
     "multicouch": "^0.8.2",
-    "nodemailer": "^2.3.0",
+    "nodemailer": "^2.3.2",
     "oauth": "^0.9.14",
-    "pouchdb": "5.3.0",
+    "pouchdb": "5.3.1",
     "promise": "^7.1.1",
     "read": "^1.0.6",
-    "request": "^2.67.0",
+    "request": "^2.72.0",
     "which": "^1.2.1"
   },
   "devDependencies": {
     "browserify": "^13.0.0",
-    "eslint": "^2.3.0",
+    "eslint": "^2.8.0",
     "eslint-config-hapi": "^9.1.0",
     "eslint-plugin-hapi": "^4.0.0",
     "gulp": "^3.9.1",
@@ -54,22 +54,22 @@
     "gulp-util": "^3.0.7",
     "gulp-wrap": "^0.11.0",
     "karma": "^0.13.22",
-    "karma-browserify": "^5.0.2",
+    "karma-browserify": "^5.0.3",
     "karma-env-preprocessor": "^0.1.1",
     "karma-mocha": "^0.2.2",
-    "karma-mocha-reporter": "^2.0.0",
+    "karma-mocha-reporter": "^2.0.1",
     "karma-phantomjs-launcher": "^1.0.0",
     "longjohn": "^0.2.11",
     "lout": "^9.0.0",
     "merge-stream": "^1.0.0",
     "mkdirp": "^0.5.1",
     "mocha": "^2.3.4",
-    "phantomjs-prebuilt": "^2.1.5",
+    "phantomjs-prebuilt": "^2.1.7",
     "rimraf": "^2.5.2",
     "sinon": "^1.17.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
-    "vision": "^4.0.1",
+    "vision": "^4.1.0",
     "watchify": "^3.7.0"
   },
   "browser": {
