--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "gulp test:server && gulp test:client"
   },
   "dependencies": {
-    "async": "^2.0.0-rc.3",
+    "async": "^1.5.2",
     "backbone": "^1.3.3",
     "boom": "^3.1.1",
     "follow": "^0.12.1",
