--- a/package.json
+++ b/package.json
@@ -13,60 +13,60 @@
     "test": "gulp test:server && gulp test:client"
   },
   "dependencies": {
-    "async": "^2.0.0-rc.6",
+    "async": "^2.0.1",
     "backbone": "^1.3.3",
-    "boom": "^3.2.1",
+    "boom": "^3.2.2",
     "follow": "^0.12.1",
     "good": "^7.0.1",
     "good-console": "^6.1.2",
-    "h2o2": "^5.1.0",
+    "h2o2": "^5.1.1",
     "handlebars": "^4.0.5",
-    "hapi": "^13.3.0",
+    "hapi": "^14.2.0",
     "hapi-auth-cookie": "^6.1.1",
-    "inert": "^4.0.0",
-    "joi": "^8.0.5",
-    "lodash": "^4.11.1",
+    "inert": "^4.0.2",
+    "joi": "^9.0.4",
+    "lodash": "^4.15.0",
     "minimist": "^1.1.3",
-    "moment": "^2.13.0",
+    "moment": "^2.14.1",
     "multicouch": "^0.8.2",
-    "nodemailer": "^2.3.2",
+    "nodemailer": "^2.5.0",
     "oauth": "^0.9.14",
-    "pouchdb": "5.4.3",
+    "pouchdb": "5.4.5",
     "promise": "^7.1.1",
     "read": "^1.0.6",
-    "request": "^2.72.0",
+    "request": "^2.74.0",
     "which": "^1.2.1"
   },
   "devDependencies": {
-    "browserify": "^13.0.1",
-    "eslint": "^2.12.0",
-    "eslint-config-hapi": "^9.1.0",
+    "browserify": "^13.1.0",
+    "eslint": "^3.3.1",
+    "eslint-config-hapi": "^10.0.0",
     "eslint-plugin-hapi": "^4.0.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-declare": "^0.3.0",
-    "gulp-eslint": "^2.0.0",
+    "gulp-eslint": "^3.0.1",
     "gulp-favicons": "^2.2.6",
     "gulp-handlebars": "^4.0.0",
-    "gulp-mocha": "^2.2.0",
+    "gulp-mocha": "^3.0.1",
     "gulp-rename": "^1.2.0",
-    "gulp-uglify": "^1.5.3",
+    "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
     "gulp-wrap": "^0.13.0",
-    "karma": "^0.13.22",
-    "karma-browserify": "^5.0.4",
+    "karma": "^1.2.0",
+    "karma-browserify": "^5.1.0",
     "karma-env-preprocessor": "^0.1.1",
-    "karma-mocha": "^1.0.1",
-    "karma-mocha-reporter": "^2.0.1",
-    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-mocha": "^1.1.1",
+    "karma-mocha-reporter": "^2.1.0",
+    "karma-phantomjs-launcher": "^1.0.1",
     "longjohn": "^0.2.11",
-    "lout": "^9.0.0",
+    "lout": "^9.1.0",
     "merge-stream": "^1.0.0",
     "mkdirp": "^0.5.1",
-    "mocha": "^2.3.4",
-    "phantomjs-prebuilt": "^2.1.7",
-    "rimraf": "^2.5.2",
-    "sinon": "^1.17.3",
+    "mocha": "^3.0.2",
+    "phantomjs-prebuilt": "^2.1.12",
+    "rimraf": "^2.5.4",
+    "sinon": "^1.17.5",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
     "vision": "^4.1.0",
