--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "follow": "^0.12.1",
     "good": "^7.0.2",
     "good-console": "^6.3.1",
+    "good-squeeze": "^5.0.0",
     "h2o2": "^5.4.0",
     "handlebars": "^4.0.5",
     "hapi": "^15.2.0",
