--- a/package.json
+++ b/package.json
@@ -13,38 +13,38 @@
     "test": "gulp test:server && gulp test:client"
   },
   "dependencies": {
-    "async": "^2.1.2",
+    "async": "^2.1.4",
     "backbone": "^1.3.3",
     "boom": "^4.2.0",
     "follow": "^0.12.1",
-    "good": "^7.0.2",
-    "good-console": "^6.3.1",
-    "good-squeeze": "^5.0.0",
+    "good": "^7.1.0",
+    "good-console": "^6.2.0",
+    "good-squeeze": "^5.0.1",
     "h2o2": "^5.4.0",
-    "handlebars": "^4.0.5",
-    "hapi": "^15.2.0",
+    "handlebars": "^4.0.6",
+    "hapi": "^16.1.0",
     "hapi-auth-cookie": "^6.1.1",
-    "inert": "^4.0.2",
-    "joi": "^9.2.0",
-    "lodash": "^4.16.6",
+    "inert": "^4.1.0",
+    "joi": "^10.2.0",
+    "lodash": "^4.17.4",
     "minimist": "^1.1.3",
-    "moment": "^2.15.2",
+    "moment": "^2.17.1",
     "multicouch": "^0.8.2",
-    "nodemailer": "^2.6.4",
-    "oauth": "^0.9.14",
-    "pouchdb": "6.0.7",
-    "promise": "^7.1.1",
+    "nes": "^6.4.0",
+    "nodemailer": "^2.7.0",
+    "oauth": "^0.9.15",
+    "pouchdb": "6.1.1",
     "read": "^1.0.6",
-    "request": "^2.78.0",
-    "which": "^1.2.11"
+    "request": "^2.79.0",
+    "which": "^1.2.12"
   },
   "devDependencies": {
-    "browserify": "^13.1.1",
-    "eslint": "^3.9.1",
+    "browserify": "^13.3.0",
+    "eslint": "^3.13.1",
     "eslint-config-hapi": "^10.0.0",
     "eslint-plugin-hapi": "^4.0.0",
     "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
+    "gulp-concat": "^2.6.1",
     "gulp-declare": "^0.3.0",
     "gulp-eslint": "^3.0.1",
     "gulp-favicons": "^2.2.7",
@@ -52,26 +52,26 @@
     "gulp-mocha": "^3.0.1",
     "gulp-rename": "^1.2.0",
     "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.7",
+    "gulp-util": "^3.0.8",
     "gulp-wrap": "^0.13.0",
-    "karma": "^1.3.0",
+    "karma": "^1.4.0",
     "karma-browserify": "^5.1.0",
     "karma-env-preprocessor": "^0.1.1",
-    "karma-mocha": "^1.2.0",
-    "karma-mocha-reporter": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.1",
     "karma-phantomjs-launcher": "^1.0.2",
     "longjohn": "^0.2.11",
     "lout": "^9.2.0",
-    "merge-stream": "^1.0.0",
+    "merge-stream": "^1.0.1",
     "mkdirp": "^0.5.1",
-    "mocha": "^3.1.2",
-    "phantomjs-prebuilt": "^2.1.13",
+    "mocha": "^3.2.0",
+    "phantomjs-prebuilt": "^2.1.14",
     "rimraf": "^2.5.4",
-    "sinon": "^1.17.6",
+    "sinon": "^1.17.7",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
-    "vision": "^4.1.0",
-    "watchify": "^3.7.0"
+    "vision": "^4.1.1",
+    "watchify": "^3.8.0"
   },
   "browser": {
     "handlebars": "handlebars/runtime.js",
